examples/bad/in/09-01-global-definitions.see
int abc(int x) {
    int abc() {
        return 1;
    }
    return x;
}

int a = 1;
string a = "sth";

void main() {
    return;
}